# rusty-alto

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TREE_INTEGRATION_NOTES.md  pyproject.toml  tree-automata-design.md
.github/workflows/: documentation.yml  publish.yml  python.yml  wiki.yml
benchdata/alto/deterministic/: deterministic.auto
benchdata/irtg/: cfg.irtg
benches/: phase1.rs
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_bindings.py
docs/: astar-candidate-compression.md  astar-candidate-gen-next-phase.md  astar-design-decisions.md  astar-performance-audit.md  astar-performance-next-phase.md  astar-post-revision-performance-plan.md  astar-revision-plan.md  benchmark-results.md  codec-infrastructure.md  eval.md  f-heuristic-design.md  f-heuristic-step1-plan.md  n10-asymptotics.md  n10-lazy-frontier-results.md  n10.txt  obligatory-leaf-results.md  performance.md  ptb-performance-changes.md  publishing.md  python-bindings.md
docs/releases/: 0.2.0.md
examples/: compare.auto  compare.trees
examples/deterministic/: deterministic.trees
experimental/: astar-span-indexes.md
python/rusty_alto/: __init__.py  __init__.pyi
scripts/: compare-alto.sh  compare-condensed-parsing.sh  compare-intersection.sh  consolidate-ptb-eval.py  make-deterministic-workload.sh  plot-ptb-eval.py
src/: alto.rs  alto_ast.rs  alto_grammar.lalrpop  application.rs  arena.rs  astar.rs  codec.rs  control.rs  corpus.rs  explicit.rs  heuristic.rs  homomorphism.rs  ids.rs  interner.rs  irtg.rs  lib.rs  main.rs  materialize.rs  memo.rs  obligatory_leaf.rs  parseval.rs  run.rs  score.rs  set_trie.rs  signature.rs  sorted_language.rs  traits.rs  viterbi.rs
src/algebras/: feature.rs  mod.rs  string.rs  string_astar.rs  tag_string.rs  tag_tree.rs  tree.rs
src/astar/: agenda.rs  generic_source.rs  lazy_span.rs  product_state.rs  span.rs
src/codecs/: mod.rs  tulipac.rs
src/combinators/: determinized.rs  invhom.rs  mapped.rs  mod.rs  product.rs
tools/alto-compare/: AltoCondensedParsingRun.java  AltoIntersectionRun.java  AltoRun.java
wiki/: Architecture.md  Codec-Infrastructure.md  Design-Decisions.md  Development-and-Performance.md  Home.md  Parsing-Algorithms.md  Parsing-Pipeline.md
