[package]
name = "rusty-alto"
version = "0.1.0"
edition = "2024"
default-run = "rusty-alto"

[dependencies]
fixedbitset = "0.5"
hashbrown = { version = "0.15", features = ["raw-entry"] }
rustc-hash = "2"
rusty-tree = { path = "../rusty-tree" }
smallvec = "1"
thiserror = "2"
lalrpop-util = "0.23"
orx-priority-queue = "1.8"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
lalrpop = "0.23"

[features]
default = []
stats = []

[[bin]]
name = "ptb-eval"
path = "src/bin/ptb-eval.rs"

[[bench]]
name = "phase1"
harness = false


[profile.release-optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
