[package]
name = "rusty-alto"
version = "0.1.0"
edition = "2024"
default-run = "rusty-alto"

[dependencies]
fixedbitset = "0.5"
hashbrown = { version = "0.15", features = ["raw-entry"] }
rustc-hash = "2"
packed-term-arena = "0.1.0"
smallvec = "1"
thiserror = "2"
lalrpop-util = "0.23"
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
lalrpop = "0.23"

[features]
default = []
stats = []
viterbi-benchmark = []

[[bin]]
name = "ptb-eval"
path = "src/bin/ptb-eval.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[[bench]]
name = "phase1"
harness = false


[profile.release-optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
