[package]
name = "rusty-alto"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
default-run = "rusty-alto"
description = "Weighted tree automata and interpreted regular tree grammars with Alto-compatible I/O"
license = "Apache-2.0"
repository = "https://github.com/coli-saar/rusty-alto"
homepage = "https://github.com/coli-saar/rusty-alto"
documentation = "https://docs.rs/rusty-alto"
readme = "README.md"
keywords = ["tree-automata", "irtg", "parsing", "grammar", "nlp"]
categories = ["algorithms", "parsing", "science"]
publish = ["crates-io"]
include = [
    "/src/**",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE-APACHE",
    "/README.md",
    "/docs/publishing.md",
]

[dependencies]
fixedbitset = "0.5"
hashbrown = { version = "0.15", features = ["raw-entry"] }
rustc-hash = "2"
packed-term-arena = "0.1.0"
smallvec = "1"
thiserror = "2"
lalrpop-util = "0.23"
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
lalrpop = "0.23"

[features]
default = []
stats = []
viterbi-benchmark = []

[[bin]]
name = "ptb-eval"
path = "src/bin/ptb-eval.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[[bench]]
name = "phase1"
harness = false


[profile.release-optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
